@@ -1,0 +1,14 @@
+{
+  "type": "minecraft:crafting_shaped",
+  "pattern": [
+    "###"
+  ],
+  "key": {
+    "#": {
+      "item": "variants:crimson_wheat"
+    }
+  },
+  "result": {
+    "item": "variants:crimson_bread"
+  }
+}
